<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Forecastify</string>
    <string name="city_country">%1$s</string>
    <string name="unknown_city">Unknown</string>
    <string name="actual_date">Updated at %1$s</string>
    <string name="latitude">Latitude: %1$s</string>
    <string name="longitude">Longitude: %1$s</string>
    <string name="main_description">%1$s</string>
    <string name="main_temperature">%1$s</string>
    <string name="feels_like">Feels like %1$s</string>
    <string name="min_temperature">Min %1$s</string>
    <string name="max_temperature">Max %1$s</string>
    <string name="sunrise">%1$s</string>
    <string name="sunset">%1$s</string>
    <string name="wind">%1$s m/s</string>
    <string name="pressure">%1$s hPa</string>
    <string name="humidity">%1$s %%</string>
    <string name="loading">Loading…</string>
    <string name="refresh">Refresh</string>
    <string name="btn_config">Settings</string>
    <string name="lbl_sunrise">Sunrise</string>
    <string name="lbl_sunset">Sunset</string>
    <string name="lbl_wind">Wind</string>
    <string name="lbl_pressure">Pressure</string>
    <string name="lbl_humidity">Humidity</string>
    <string name="created_by">Created By</string>
    <string name="author">Diego Rubí S.</string>

    <!-- SettingsActivity -->
    <string name="title_activity_settings">Settings</string>
    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails</string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="action_settings">Settings\n</string>
    <string name="about_header">About</string>
    <string name="version_title">Version</string>
    <string name="version_summary">1.0</string>
    <string name="units_title">Units of measurement</string>
    <!-- SettingsActivity -->

    <!-- MapsActivity -->
    <string name="title_activity_maps">Google Maps</string>
    <string name="btn_get_your_location">Your location</string>
    <string name="btn_select_location">Select location</string>
    <!-- MapsActivity -->
</resources>